--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,7 +2,10 @@
   "dependencies": {
     "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.inputsystem": "1.5.0",
     "com.unity.render-pipelines.universal": "12.1.10",
+    "com.unity.searcher": "4.9.2",
+    "com.unity.subsystemregistration": "1.1.2",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.4",
