--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,20 +1,21 @@
 {
   "dependencies": {
-    "com.unity.ide.visualstudio": "2.0.17",
+    "com.unity.ai.navigation": "1.1.5",
+    "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.inputsystem": "1.5.0",
-    "com.unity.render-pipelines.universal": "12.1.10",
+    "com.unity.inputsystem": "1.7.0",
+    "com.unity.render-pipelines.universal": "14.0.9",
     "com.unity.searcher": "4.9.2",
     "com.unity.subsystemregistration": "1.1.2",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.6.4",
+    "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
-    "com.unity.visualscripting": "1.8.0",
-    "com.unity.xr.interaction.toolkit": "2.3.0",
-    "com.unity.xr.management": "4.2.1",
-    "com.unity.xr.oculus": "3.2.2",
-    "com.unity.xr.openxr": "1.6.0",
+    "com.unity.visualscripting": "1.9.1",
+    "com.unity.xr.interaction.toolkit": "2.5.2",
+    "com.unity.xr.management": "4.4.0",
+    "com.unity.xr.oculus": "4.1.2",
+    "com.unity.xr.openxr": "1.9.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
